# SMPLpp

./: CMakeLists.txt
SMPL++/src/smpl/: SMPL.cpp
